--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/2DegreesInvesting/adminApp/branch/master/graph/badge.svg)](https://codecov.io/gh/2DegreesInvesting/adminApp?branch=master)
 <!-- badges: end -->
 
-The goal of adminApp is to helps with administration tasks.
+The goal of adminApp is to help with administration tasks.
 
 ## Installation
 
